# error-propagate

./: .gitignore  Makefile  pyproject.toml
sample/: __main__.py  sample.py
tests/: test_square.py
